[gd_scene load_steps=3 format=3 uid="uid://72uhpsyxdbi7"]

[ext_resource type="Script" path="res://source/UI/widgets/card_container.gd" id="1_6hgmr"]
[ext_resource type="PackedScene" uid="uid://ik2l54j58jrl" path="res://source/UI/widgets/bessel_arrow.tscn" id="2_qil84"]

[node name="CardContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6hgmr")
offset_x_proportion = 0.6
tween_speed = 0.1
hand_card_position = Vector2(480, 560)

[node name="bessel_arrow" parent="." instance=ExtResource("2_qil84")]

[node name="hand_card" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -112.0
offset_right = -63.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0

[node name="draw_deck" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = -36.0
offset_right = 37.0
offset_bottom = -36.0
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="draw_deck"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="discard_deck" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -38.0
offset_right = -51.0
offset_bottom = -38.0
grow_horizontal = 0
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="discard_deck"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="button" type="VBoxContainer" parent="."]
layout_mode = 0
alignment = 1

[node name="btn_add_card" type="Button" parent="button"]
layout_mode = 2
text = "add card"

[node name="btn_remove_card" type="Button" parent="button"]
layout_mode = 2
text = "remove card"

[connection signal="pressed" from="button/btn_add_card" to="." method="_on_btn_add_card_pressed"]
[connection signal="pressed" from="button/btn_remove_card" to="." method="_on_btn_remove_card_pressed"]
